Basic skeleton up for home, about, and content license

--- a/_config.yml
+++ b/_config.yml
@@ -6,21 +6,18 @@ highlighter:      true
 permalink:        pretty
 
 # Setup
-title:            Lanyon
-tagline:          'A Jekyll theme'
-description:      'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://lanyon.getpoole.com
+title:            simon's bench
+tagline:          'A [digital] notebook on craftsmanship'
+description:      ''
+url:              https://simonsbench.net
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           'simon'
+  url:            ''
 
 paginate:         5
 
 # Custom vars
 version:          2.0.0
-
-github:
-  repo:           https://github.com/poole/lanyon
 
 plugins: [jekyll-paginate]
