Updates for font, and fixed-width header in subtitle
In poole.css, the html default fonts were set to match the lanyon.css
fons; different sets meant that the about/posts were different than
the landing page. In the site subtitle and the lanyon.css page, a
separate tag was added to make the [digital] part fixed-width.

Font access was unified in the head.html includes file.

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        /:title
 
 # Setup
 title:            simon's bench
-tagline:          'A [digital] notebook on craftsmanship'
+tagline:          'A <small-fw>[digital]</small-fw> notebook on craftsmanship'
 description:      ''
 url:              https://simonsbench.net
 
